force-app/main/default/objects/Subcontractor_RFP__c/Subcontractor_RFP__c.object-meta.xml
<CustomObject>
    <label>Subcontractor RFP</label>
    <nameField>
        <displayFormat>SubconRFP-{0000000000}</displayFormat>
        <label>Subcontractor RFP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subcontractor RFPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>