force-app/main/default/objects/Subcontractor_RFP__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Subcontractor RFPs</relationshipLabel>
    <relationshipName>Subcontractor_RFPs</relationshipName>
    <type>Lookup</type>
</CustomField>