force-app/main/default/objects/Subcontractor_RFP__c/fields/RFP__c.field-meta.xml
<CustomField>
    <fullName>RFP__c</fullName>
    <label>RFP</label>
    <length>62768</length>
    <type>Html</type>
</CustomField>