force-app/main/default/objects/Subcontractor_RFP__c/fields/Subcontractor_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_Specialty__c</fullName>
    <label>Subcontractor Specialty</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subcontractor_Specialties</valueSetName>
    </valueSet>
</CustomField>